# treeworth-fastapi

./: dev.db  pyproject.toml
app/: main.py
app/lib/db/: database.py
app/lib/db/models/: property.py
app/lib/utils/: convert_to_float.py  flatten_json.py  get_propety_data.py
app/routes/: streets.py
data/: city-trees.json
notebooks/: treeworth.ipynb
tests/lib/: test_db_database.py  test_utils_ get_property_data.py  test_utils_conver_to_float.py  test_utils_flatten_json.py
